# elastic_fusion_ros

./: CMakeLists.txt  package.xml
action/: ElasticFusion.action
scripts/: elastic_fusion_ros_server.py
